<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInterfaz">

    <TextView
        android:id="@+id/IdControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/userInterfazL1"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/IdBufferIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="212dp"
        android:text="@string/userInterfazL2"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        tools:text=" " />

    <Button
        android:id="@+id/IdDesconectar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="DESCONECTAR" />

    <ImageView
        android:id="@+id/IdFormasCalificacion"
        android:layout_width="149dp"
        android:layout_height="157dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/IdDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/userInterfazL3"
        android:textAlignment="viewStart"
        android:textStyle="bold" />
</RelativeLayout>